@@ -24,34 +24,65 @@
 
 
 ##############################################################################
-#' Class "\code{SummaryUSL}" for summaries of class "\code{USL-class}"
+#' Class "\code{USL}" for Universal Scalability Law models
 #'
-#' \code{SummaryUSL} is a class to store the summary of an
-#' \code{\link{USL-class}}.
+#' This class encapsulates the Universal Scalability Law. Use the function
+#' \code{\link{usl}} to create new objects from this class.
 #'
 #' @section Slots:
 #' \describe{
+#' \item{\code{frame}:}{The model frame.}
 #' \item{\code{call}:}{The call used to create the model.}
+#' \item{\code{regr}:}{The name of the regressor variable.}
+#' \item{\code{regr}:}{The name of the response variable.}
+#' \item{\code{scale.factor}:}{The scale factor used to create the model.}
+#' \item{\code{coefficients}:}{The coefficients sigma and kappa of the model.}
+#' \item{\code{deviance}:}{The deviance (residual sum of squares).}
+#' \item{\code{fitted}:}{The fitted values of the model. This is a vector.}
 #' \item{\code{residuals}:}{The residuals of the model. This is a vector.}
 #' \item{\code{r.squared}:}{Coefficient of determination of the model.}
 #' \item{\code{adj.r.squared}:}{Adjusted coefficient of determination.}
-#' \item{\code{coefficients}:}{The coefficients sigma and kappa of the model.}
+#' \item{\code{na.action}:}{The \code{na.action} used by the model.}
 #' }
 #'
-#' @name SummaryUSL-class
-#' @docType class
-#' @rdname SummaryUSL-class
-#' @exportClass SummaryUSL
-setClass("SummaryUSL",
-         representation(call          = "call",
+#' @seealso \code{\link{usl}}
+#'
+#' @name USL-class
+#' @rdname USL-class
+#' @exportClass USL
+setClass("USL",
+         representation(frame         = "data.frame",
+                        call          = "call",
+                        regr          = "character",
+                        resp          = "character",
+                        scale.factor  = "numeric",
+                        coefficients  = "vector",
+                        deviance      = "numeric",
+                        fitted        = "vector",
                         residuals     = "vector",
                         r.squared     = "numeric",
                         adj.r.squared = "numeric",
-                        coefficients  = "vector"),
-         prototype(r.squared = 0,
-                   adj.r.squared = 0),
+                        na.action     = "character"),
+         prototype(r.squared     = 0,
+                   adj.r.squared = 0,
+                   na.action     = "na.omit"),
          validity = function(object) {
            err <- character()
+
+           if (length(object@regr) == 0) {
+             msg <- "name of regressor variable cannot be empty"
+             err <- c(err, msg)
+           }
+
+           if (length(object@resp) == 0) {
+             msg <- "name of regsponse variable cannot be empty"
+             err <- c(err, msg)
+           }
+
+           if (object@scale.factor <= 0) {
+             msg <- "scale factor must be > 0"
+             err <- c(err, msg)
+           }
 
            if (any(object@coefficients < 0)) {
              msg <- "all coefficients must be >= 0"
@@ -91,60 +122,3 @@ setClass("SummaryUSL",
 
            if (length(err) == 0) return(TRUE) else return(err)
          })
-
-
-##############################################################################
-#' Class "\code{USL}" for Universal Scalability Law models
-#'
-#' This class encapsulates the Universal Scalability Law. Use the function
-#' \code{\link{usl}} to create new objects from this class.
-#'
-#' The class contains the class "\code{\link{SummaryUSL-class}}".
-#'
-#' @section Slots:
-#' \describe{
-#' \item{\code{frame}:}{The model frame.}
-#' \item{\code{regr}:}{The name of the regressor variable.}
-#' \item{\code{regr}:}{The name of the response variable.}
-#' \item{\code{scale.factor}:}{The scale factor of the model.}
-#' \item{\code{fitted}:}{The fitted values of the model. This is a vector.}
-#' }
-#'
-#' @seealso \code{\link{SummaryUSL-class}}, \code{\link{usl}}
-#'
-#' @references N. J. Gunther. Guerrilla Capacity Planning. Springer-Verlag,
-#'   Heidelberg, Germany, 2007.
-#'
-#' @name USL-class
-#' @rdname USL-class
-#' @exportClass USL
-setClass("USL",
-         representation(frame = "data.frame",
-                        regr  = "character",
-                        resp  = "character",
-                        scale.factor  = "numeric",
-                        deviance = "numeric",
-                        fitted = "vector",
-                        na.action = "character"),
-         prototype = (na.action = "na.omit"),
-         validity = function(object) {
-           err <- character()
-
-           if (length(object@regr) == 0) {
-             msg <- "name of regressor variable cannot be empty"
-             err <- c(err, msg)
-           }
-
-           if (length(object@resp) == 0) {
-             msg <- "name of regsponse variable cannot be empty"
-             err <- c(err, msg)
-           }
-
-           if (object@scale.factor <= 0) {
-             msg <- "scale factor must be > 0"
-             err <- c(err, msg)
-           }
-
-           if (length(err) == 0) return(TRUE) else return(err)
-         },
-         contains="SummaryUSL")
