@@ -24,20 +24,20 @@
 
 
 ##############################################################################
-#' Print objects of class "\code{SummaryUSL}" or "\code{USL}"
+#' Print objects of class "\code{USL}"
 #'
-#' \code{print} prints its argument and returns is invisibly (via
+#' \code{print} prints its argument and returns it invisibly (via
 #' \code{\link{invisible}(x)}).
 #'
-#' @usage \S4method{print}{SummaryUSL}(x, digits, ...)
-#' @param x An object from class \code{SummaryUSL} or \code{USL}.
+#' @usage \S4method{print}{USL}(x, digits, ...)
+#' @param x An object from class \code{USL}.
 #' @param digits Minimal number of \emph{significant} digits, see
 #'   \link{print.default}.
 #' @param ... Other arguments passed to other methods.
 #'
 #' @return \code{print} returns the object \code{x} invisibly.
 #'
-#' @seealso \code{\link{usl}}, \code{\link{print}}
+#' @seealso \code{\link{usl}}, \code{\link{USL-class}}
 #'
 #' @examples
 #' require(usl)
@@ -47,18 +47,22 @@
 #' ## Print result from USL model for demo dataset
 #' print(usl(throughput ~ processors, raytracer))
 #'
-#' @aliases print,SummaryUSL-method
+#' @aliases print,USL-method
 #' @docType methods
 #' @rdname print-methods
 #' @export
+#'
 setMethod(
   f = "print",
-  signature = "SummaryUSL",
+  signature = "USL",
   definition = function(x, digits = max(3, getOption("digits") - 3), ...) {
     cat("\nCall:\n",
-        paste(deparse(x@call), sep = "\n", collapse = "\n"), "\n\n", sep = "")
+        paste(deparse(x@call), sep = "\n", collapse = "\n"), "\n", sep = "")
 
-    cat("Residuals:\n")
+    cat("\nScale Factor for normalization:",
+        formatC(x@scale.factor, digits = digits), "\n")
+
+    cat("\nResiduals:\n")
     zz <- zapsmall(quantile(x@residuals), digits + 1)
     print(structure(zz, names = c("Min", "1Q", "Median", "3Q", "Max")),
           digits = digits, ...)
@@ -72,31 +76,6 @@ setMethod(
     cat("\nMultiple R-squared:", formatC(x@r.squared, digits = digits))
     cat(",\tAdjusted R-squared:",formatC(x@adj.r.squared, digits = digits))
 
-    cat("\n")
-    invisible(x)
-  }
-)
-
-
-#' @usage \S4method{print}{USL}(x, digits, ...)
-#' @aliases print,USL-method
-#' @docType methods
-#' @rdname print-methods
-#' @export
-setMethod(
-  f = "print",
-  signature = "USL",
-  definition = function(x, digits = getOption("digits"), ...) {
-    cat("\nCall:\n",
-        paste(deparse(x@call), sep="\n", collapse = "\n"), "\n\n", sep="")
-
-    if(length(coef(x))) {
-      cat("Coefficients:\n")
-      print.default(format(coef(x), digits=digits), print.gap = 2, quote = FALSE)
-    } else cat("No coefficients\n")
-
-    cat("\nScale Factor:", formatC(x@scale.factor, digits = digits))
-    
     cat("\n")
     invisible(x)
   }
