@@ -1,17 +1,13 @@
 \docType{methods}
 \name{print}
 \alias{print}
-\alias{print,SummaryUSL-method}
 \alias{print,USL-method}
-\title{Print objects of class "\code{SummaryUSL}" or "\code{USL}"}
+\title{Print objects of class "\code{USL}"}
 \usage{
-\S4method{print}{SummaryUSL}(x, digits, ...)
-
 \S4method{print}{USL}(x, digits, ...)
 }
 \arguments{
-  \item{x}{An object from class \code{SummaryUSL} or
-  \code{USL}.}
+  \item{x}{An object from class \code{USL}.}
 
   \item{digits}{Minimal number of \emph{significant}
   digits, see \link{print.default}.}
@@ -22,7 +18,7 @@
   \code{print} returns the object \code{x} invisibly.
 }
 \description{
-  \code{print} prints its argument and returns is invisibly
+  \code{print} prints its argument and returns it invisibly
   (via \code{\link{invisible}(x)}).
 }
 \examples{
@@ -34,6 +30,6 @@ data(raytracer)
 print(usl(throughput ~ processors, raytracer))
 }
 \seealso{
-  \code{\link{usl}}, \code{\link{print}}
+  \code{\link{usl}}, \code{\link{USL-class}}
 }
 
