@@ -1,12 +1,9 @@
 \docType{methods}
 \name{show}
 \alias{show}
-\alias{show,SummaryUSL-method}
 \alias{show,USL-method}
-\title{Show objects of class "\code{SummaryUSL}" or "\code{USL}"}
+\title{Show objects of class "\code{USL}"}
 \usage{
-\S4method{show}{SummaryUSL}(object)
-
 \S4method{show}{USL}(object)
 }
 \arguments{
@@ -27,6 +24,6 @@ data(raytracer)
 show(usl(throughput ~ processors, raytracer))
 }
 \seealso{
-  \code{\link{usl}}
+  \code{\link{usl}}, \code{\link{USL-class}}
 }
 
